--- a/index.html
+++ b/index.html
@@ -11,28 +11,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <link rel="apple-touch-icon" href="icon-192.png">
   <style>
-    :root {
-      --bg-color: #f0f4f5;
-      --text-color: #333;
-      --card-bg: #ffffff;
-      --input-bg: #ffffff;
-      --accent-color: #007aff;
-      --secondary-bg: #e9ecef;
-      --modal-bg: white;
-    }
-
-    @media (prefers-color-scheme: dark) {
-      :root {
-        --bg-color: #1d1f21;
-        --text-color: #eee;
-        --card-bg: #2c2f33;
-        --input-bg: #2a2d30;
-        --accent-color: #4dabf7;
-        --secondary-bg: #3a3d40;
-        --modal-bg: #2b2b2b;
-      }
-    }
-
+    /* Beautified layout improvements */
     *, *::before, *::after {
       box-sizing: border-box;
     }
@@ -41,13 +20,13 @@
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
       margin: 0;
       padding: 1.5em;
-      background: var(--bg-color);
-      color: var(--text-color);
+      background: #f0f4f5;
+      color: #333;
     }
 
     h1 {
       text-align: center;
-      color: var(--accent-color);
+      color: #005b63;
       margin-bottom: 1em;
     }
 
@@ -64,8 +43,6 @@
       border: 1px solid #ccc;
       border-radius: 6px;
       font-size: 1em;
-      background: var(--input-bg);
-      color: var(--text-color);
     }
 
     .date-group {
@@ -85,13 +62,13 @@
       padding: 0.5em;
       border: 1px solid #ccc;
       border-radius: 6px;
-      background: var(--secondary-bg);
+      background: #e9ecef;
       text-align: center;
       font-weight: bold;
     }
 
     .day {
-      background: var(--card-bg);
+      background: #ffffff;
       border: 1px solid #ccc;
       border-radius: 8px;
       padding: 1em;
@@ -115,7 +92,7 @@
       border: none;
       border-radius: 6px;
       color: white;
-      background-color: var(--accent-color);
+      background-color: #007aff;
       cursor: pointer;
     }
 
@@ -125,14 +102,13 @@
 
     #output {
       white-space: pre-wrap;
-      background: var(--card-bg);
+      background: #ffffff;
       border: 1px solid #ccc;
       padding: 1em;
       margin-top: 2em;
       border-radius: 8px;
       font-family: monospace;
       font-size: 1em;
-      color: var(--text-color);
     }
 
     .error-box {
@@ -146,6 +122,7 @@
       margin-top: 1em;
     }
 
+    /* Modal styling */
     #modal {
       position: fixed;
       inset: 0;
@@ -157,7 +134,7 @@
     }
 
     #modalContent {
-      background: var(--modal-bg);
+      background: white;
       padding: 2em 1em 1em;
       border-radius: 8px;
       width: 90%;
@@ -170,8 +147,8 @@
     #modalTitle {
       font-size: 1.2em;
       font-weight: bold;
-      background: var(--secondary-bg);
-      color: var(--text-color);
+      background: #f5f5f5;
+      color: #333;
       border: none;
       padding: 0.8em;
       width: 100%;
@@ -183,7 +160,7 @@
     #modalItems span {
       display: inline-block;
       background: #e0f7fa;
-      color: var(--accent-color);
+      color: #007aff;
       padding: 0.5em 0.75em;
       margin: 0.25em;
       border-radius: 6px;
@@ -192,7 +169,7 @@
     }
 
     #modalItems span.selected {
-      background: var(--accent-color);
+      background: #007aff;
       color: white;
       font-weight: bold;
     }
@@ -211,6 +188,7 @@
     }
   </style>
 </head>
+
 <body>
   <h1>Itinerary Builder</h1>
 
@@ -264,4 +242,5 @@
   <!-- Your script should go here -->
   <script src="main.js"></script>
 </body>
+
 </html>
