--- a/index.html
+++ b/index.html
@@ -677,9 +677,15 @@ document.addEventListener("DOMContentLoaded", () => {
       } else if (entry.type === "item") {
         const { category, item } = entry;
         if (category.includes("List of")) {
-          const existing = outputChunks.find(chunk =>
-            !chunk.includes(":") && chunk.endsWith(".")
-          );
+const existingIndex = outputChunks.findIndex(chunk =>
+  typeof chunk === "string" && !chunk.includes(":") && chunk.endsWith(".")
+);
+
+if (existingIndex !== -1) {
+  outputChunks[existingIndex] = outputChunks[existingIndex].slice(0, -1) + `, ${item}.`;
+} else {
+  outputChunks.push(`${item}.`);
+}
           if (existing) {
             const index = outputChunks.indexOf(existing);
             outputChunks[index] = existing.slice(0, -1) + `, ${item}.`;
