--- a/index.html
+++ b/index.html
@@ -48,15 +48,16 @@
     }
 
     input[type="text"],
-    .activity-input {
-      width: 100%;
-      padding: 0.6em;
-      font-size: 1em;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      margin-top: 0.3em;
-      background: white;
-    }
+.activity-input {
+  width: 100%;
+  padding: 0.6em;
+  font-size: 1em;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  margin-top: 0.3em;
+  background: #fff9e6;
+}
+
 
 .date-group {
   display: flex;
@@ -89,7 +90,7 @@ input[readonly] {
   font-size: 1em;
   border-radius: 6px;
   border: 1px solid #ccc;
-  background: white;
+  background: #fff9e6;
   box-sizing: border-box;
 }
 
