--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
   border: 1px solid #ccc;
   border-radius: 6px;
   margin-top: 0.3em;
-  background: #fff9e6;
+  background: #faffbd;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.05);
+
 }
 
 
@@ -90,8 +92,10 @@ input[readonly] {
   font-size: 1em;
   border-radius: 6px;
   border: 1px solid #ccc;
-  background: #fff9e6;
+  background: #faffbd;
   box-sizing: border-box;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.05);
+
 }
 
 .readonly-field {
