--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@ input[readonly] {
   align-items: center;
   justify-content: center;
   color: #333;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.05);
+
 }
 
     .day {
@@ -159,11 +161,13 @@ input[readonly] {
 
     pre {
       white-space: pre-wrap;
-      background: #eee;
+      background: #faffbd;
       padding: 1em;
       border-radius: 8px;
       margin-top: 1em;
       font-size: 0.95em;
+      box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.05);
+
     }
 
 .error-box {
