--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ input[readonly] {
 
   <div id="daysContainer"></div>
 
-<pre id="output" style="white-space: pre-wrap; background: #fefefe; padding: 1em; border: 1px solid #ccc; border-radius: 6px; font-size: 1em; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+<pre id="output" style="white-space: pre-wrap; padding: 1em; border: 1px solid #ccc; border-radius: 6px; font-size: 1em; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 ">
 ✨ <b>How to Use the Itinerary Builder
 
