--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ input[readonly] {
   font-size: 1em;
   border-radius: 6px;
   border: 1px solid #ccc;
-  background: #f2f2f2;
+  background: #faffbd;
   box-sizing: border-box;
   display: flex;
   align-items: center;
@@ -161,7 +161,7 @@ input[readonly] {
 
     pre {
       white-space: pre-wrap;
-      background: #faffbd;
+      background: #faffbd !important;
       padding: 1em;
       border-radius: 8px;
       margin-top: 1em;
