--- a/index.html
+++ b/index.html
@@ -104,15 +104,13 @@ input[readonly] {
   font-size: 1em;
   border-radius: 6px;
   border: 1px solid #ccc;
-  background: #faffbd;
-  box-sizing: border-box;
+  background: #faffbd !important;
+  color: #333;
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #333;
-  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.05);
-
 }
+
 
     .day {
       border: 1px solid #ccc;
