--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     body {
       font-family: -apple-system, sans-serif;
       padding: 1em;
-      background: #66b2ae;
+      background: #fffde6;
       margin: 0;
     }
 
