--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ input[readonly] {
 #modal {
   position: fixed;
   inset: 0;
-  background: rgba(0, 0, 0, 0.6);
+background: #fffde6;
   display: none;
   justify-content: center;
   align-items: center;
