--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ input[readonly] {
 #modal {
   position: fixed;
   inset: 0;
-background: #fffde6;
+  background: rgba(0, 0, 0, 0.6);
   display: none;
   justify-content: center;
   align-items: center;
@@ -199,7 +199,7 @@ background: #fffde6;
 
 #modalContent {
   position: relative;
-  background: white;
+  background: fffde6;
   padding: 2em 1em 1em 1em;
   border-radius: 8px;
   width: 100%;
