--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ input[readonly] {
 
 #modalContent {
   position: relative;
-  background: #fffde6;
+  background: #faffbd;
   padding: 2em 1em 1em 1em;
   border-radius: 8px;
   width: 100%;
