--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@ function updateModalTitleState() {
   const modalTitle = document.getElementById("modalTitle");
   const hasSelections = selectionOrder.length > 0;
   modalTitle.textContent = hasSelections ? "Accept Selection" : "Select Activities";
-  modalTitle.style.background = hasSelections ? "#007aff" : "#f5f5f5";
+  modalTitle.style.background = hasSelections ? "#007aff" : "#faffbd";
   modalTitle.style.color = hasSelections ? "white" : "#333";
 }
 
