--- a/index.html
+++ b/index.html
@@ -289,6 +289,16 @@ input[readonly] {
   color: #666;
 }
 
+#signature {
+  margin-top: 3em;
+  padding: 1em 0;
+  text-align: center;
+  font-size: 0.9em;
+  color: #666;
+  font-style: italic;
+  opacity: 0.8;
+}
+
   </style>
 </head>
 <body>
@@ -786,6 +796,12 @@ document.getElementById("shareButton").addEventListener("click", () => {
     });
   }
 </script>
+<footer id="signature">
+  <span>Egeria – Itinerary Builder · Made by <strong>Tito</strong></span>
+</footer>
+</body>
+</html>
+
 
 </body>
 </html>
