--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ input[readonly] {
 
   <div id="daysContainer"></div>
 
-<pre id="output" style="white-space: pre-wrap; padding: 1em; border: 1px solid #ccc; border-radius: 6px; font-size: 1em; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+<pre id="output" style="white-space: pre-wrap; padding: 1em; border: 1px solid #ccc; border-radius: 6px; font-size: 1em; margin-bottom: 0.3em; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 ">
 ✨ <b>How to Use the Itinerary Builder
 
