--- a/index.html
+++ b/index.html
@@ -617,10 +617,54 @@ function openModal(existingSelections = []) {
     itemContainer.style.display = items.length > 1 ? "none" : "block";
     itemContainer.style.marginBottom = "1em";
 
-    label.onclick = () => {
-      const isVisible = itemContainer.style.display === "block";
-      itemContainer.style.display = isVisible ? "none" : "block";
-    };
+    // Create "Select All" button (initially hidden)
+let selectAllBtn;
+
+if (items.length > 1) {
+  selectAllBtn = document.createElement("small");
+  selectAllBtn.textContent = "Select All";
+  selectAllBtn.style.marginLeft = "1em";
+  selectAllBtn.style.cursor = "pointer";
+  selectAllBtn.style.color = "#007aff";
+  selectAllBtn.style.fontSize = "0.9em";
+  selectAllBtn.style.display = "none"; // hidden initially
+
+  let allSelected = false;
+
+  selectAllBtn.onclick = () => {
+    allSelected = !allSelected;
+    const spans = itemContainer.querySelectorAll("span");
+
+    spans.forEach(span => {
+      const item = span.textContent;
+
+      if (allSelected && !span.classList.contains("selected")) {
+        span.classList.add("selected");
+        selectionOrder.push({ type: "item", category, item });
+      } else if (!allSelected && span.classList.contains("selected")) {
+        span.classList.remove("selected");
+        selectionOrder = selectionOrder.filter(
+          e => !(e.type === "item" && e.category === category && e.item === item)
+        );
+      }
+    });
+
+    selectAllBtn.textContent = allSelected ? "Unselect All" : "Select All";
+    updateModalTitleState();
+  };
+
+  label.appendChild(selectAllBtn);
+}
+
+// Toggle visibility on category click
+label.onclick = () => {
+  const isVisible = itemContainer.style.display === "block";
+  itemContainer.style.display = isVisible ? "none" : "block";
+  if (selectAllBtn) {
+    selectAllBtn.style.display = isVisible ? "none" : "inline";
+  }
+};
+
 
     // Create "Select All" button
 if (items.length > 1) {
