--- a/index.html
+++ b/index.html
@@ -678,18 +678,23 @@ if (isEligibleForToggle) {
       }
 
       span.onclick = () => {
-        span.classList.toggle("selected");
+  span.classList.toggle("selected");
 
-        if (span.classList.contains("selected")) {
-          selectionOrder.push({ type: "item", category, item });
-        } else {
-          selectionOrder = selectionOrder.filter(e =>
-  !(e.type === "item" && e.category === category)
-);
+  if (span.classList.contains("selected")) {
+    const alreadyIn = selectionOrder.some(e =>
+      e.type === "item" && e.category === category && e.item === item
+    );
+    if (!alreadyIn) {
+      selectionOrder.push({ type: "item", category, item });
+    }
+  } else {
+    selectionOrder = selectionOrder.filter(e =>
+      !(e.type === "item" && e.category === category && e.item === item)
+    );
+  }
 
-        }
-        updateModalTitleState(); // <-- call here after toggling
-      };
+  updateModalTitleState();
+};
 
       itemContainer.appendChild(span);
     });
